# TrakoDracoPy

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  setup.cfg  setup.py
TrakoDracoPy/: CMakeLists.txt  _TrakoDracoPy.h  _TrakoDracoPy.pxd  _TrakoDracoPy.pyx  __init__.py  _version.py
